plugins {
    id 'com.android.application' version '9.3.1'
}

static def getDate() { return new Date().format('yyyyMMdd') }

/**
 * Versao semantica do MineDrakk. Unica fonte da verdade: mude aqui ao lancar.
 * O versionCode e derivado dela, entao nao ha dois numeros para manter em sincronia.
 */
ext.minedrakkVersion = "0.1.3"

// Avaliado uma unica vez, no corpo do script (nao em metodo static: metodos
// estaticos nao enxergam `gradle`, o que causava
// "Apparent variable 'gradle' was found in a static scope").
def isDebugBuild = !gradle.startParameter.taskNames.any {
    it.toLowerCase().contains('release')
}
def debugSuffix = isDebugBuild ? "-debug" : ""

/**
 * versionCode inteiro e crescente, exigido pelo Android e pela Play Store.
 * Formato: MAJOR * 1_000_000 + MINOR * 10_000 + PATCH * 100
 * Ex.: 0.1.0 -> 10000 | 1.2.3 -> 1020300
 */
def getVersionCode = {
    def parts = minedrakkVersion.tokenize('.').collect { it.toInteger() }
    return parts[0] * 1000000 + parts[1] * 10000 + parts[2] * 100
}

/** Executa um comando git e devolve a saida, ou "" se falhar. */
def gitOutput = { List<String> args ->
    try {
        return providers.exec {
            commandLine(args)
            ignoreExitValue = true
        }.standardOutput.asText.get().trim()
    } catch (Exception ignored) {
        return ""
    }
}

/**
 * Nome de versao legivel: <semver>[-<n> commits][-<hash>][-dirty][-debug]
 * Ex.: 0.1.0-debug            (na tag exata, build de debug)
 *      0.1.0-14-a1b2c3d-debug (14 commits apos a tag)
 *      0.1.0-a1b2c3d-dirty    (sem tag, com alteracoes nao commitadas)
 */
def getVersionName = {
    // Considera apenas tags v<semver>, para que tags de build nao interfiram
    String describe = gitOutput(['git', 'describe', '--tags', '--match', 'v[0-9]*', '--dirty'])
    if (!describe.isEmpty()) {
        // v0.1.0-14-ga1b2c3d-dirty -> 0.1.0-14-a1b2c3d-dirty
        return describe.replaceFirst(/^v/, '').replaceFirst(/-g/, '-') + debugSuffix
    }

    // Sem tag de versao ainda: usa o hash curto do commit
    String hash = gitOutput(['git', 'rev-parse', '--short', 'HEAD'])
    if (hash.isEmpty()) {
        // Fora de um repositorio git (ex.: tarball do codigo-fonte)
        return minedrakkVersion + "-" + getDate() + debugSuffix
    }
    return minedrakkVersion + "-" + hash + debugSuffix
}

def getCFApiKey = {
    String key = System.getenv("CURSEFORGE_API_KEY");
    if(key != null) return key;
    File curseforgeKeyFile = new File("$projectDir/curseforge_key.txt");
    if(curseforgeKeyFile.canRead() && curseforgeKeyFile.isFile()) {
        return curseforgeKeyFile.text;
    }
    logger.warn('BUILD: You have no CurseForge key, the curseforge api will get disabled !');
    return "DUMMY";
}

/**
 * Resolve a configuracao de assinatura de release sem versionar a keystore.
 * Ordem de precedencia: keystore.properties > variaveis de ambiente > ausente.
 * Ver AUDITORIA.md secao B3.
 */
def resolveReleaseSigning = {
    def result = [hasStore: false, storeFile: null, storePassword: null,
                  keyAlias: null, keyPassword: null]

    File propsFile = new File("$projectDir/keystore.properties")
    if (propsFile.canRead() && propsFile.isFile()) {
        Properties props = new Properties()
        propsFile.withInputStream { props.load(it) }
        def storePath = props.getProperty("storeFile")
        if (storePath != null && new File(storePath).isFile()) {
            result.hasStore = true
            result.storeFile = storePath
            result.storePassword = props.getProperty("storePassword")
            result.keyAlias = props.getProperty("keyAlias")
            result.keyPassword = props.getProperty("keyPassword")
            logger.lifecycle('BUILD: release signing via keystore.properties')
            return result
        }
        logger.warn('BUILD: keystore.properties found but storeFile is missing or invalid')
    }

    def envStore = System.getenv("MINEDRAKK_KEYSTORE_FILE")
    if (envStore != null && new File(envStore).isFile()) {
        result.hasStore = true
        result.storeFile = envStore
        result.storePassword = System.getenv("MINEDRAKK_KEYSTORE_PASSWORD")
        result.keyAlias = System.getenv("MINEDRAKK_KEYSTORE_ALIAS")
        result.keyPassword = System.getenv("MINEDRAKK_KEYSTORE_KEY_PASSWORD")
        logger.lifecycle('BUILD: release signing via environment variables')
        return result
    }

    logger.warn('BUILD: no release keystore configured, falling back to the debug key. ' +
            'This build is NOT publishable.')
    return result
}
def releaseSigning = resolveReleaseSigning()

configurations {
    instrumentedClasspath {
        canBeConsumed = false
        canBeResolved = true
    }
}

android {
    namespace 'net.kdt.pojavlaunch'

    compileSdk = 36


    signingConfigs {
        customDebug {
            storeFile file("debug.keystore")
            storePassword "android"
            keyAlias "androiddebugkey"
            keyPassword "android"
        }
        // Keystore de release: NUNCA versionada (ver AUDITORIA.md B3).
        // Configure via app_pojavlauncher/keystore.properties (ignorado pelo git):
        //     storeFile=/caminho/absoluto/minedrakk-release.jks
        //     storePassword=...
        //     keyAlias=...
        //     keyPassword=...
        // ou via variaveis de ambiente MINEDRAKK_KEYSTORE_{FILE,PASSWORD,ALIAS,KEY_PASSWORD}.
        // Se nenhuma estiver presente, o build de release cai para a chave de debug
        // (util para builds locais/CI de teste; NAO publicavel).
        customRelease {
            if (releaseSigning.hasStore) {
                storeFile file(releaseSigning.storeFile)
                storePassword releaseSigning.storePassword
                keyAlias releaseSigning.keyAlias
                keyPassword releaseSigning.keyPassword
            } else {
                storeFile file("debug.keystore")
                storePassword "android"
                keyAlias "androiddebugkey"
                keyPassword "android"
            }
        }
    }

    defaultConfig {
        applicationId "com.drakkonx.minedrakk"
        minSdkVersion 21
        // AUDITORIA B2: Google Play exige API 36 para novos apps e updates desde 31/08/2026.
        targetSdkVersion 36
        versionCode getVersionCode()
        versionName getVersionName()
        multiDexEnabled true //important
        resValue 'string', 'curseforge_api_key', getCFApiKey()
        externalNativeBuild {
            ndkBuild {
                // Fix for Windows command line length limit
                arguments "APP_SHORT_COMMANDS=true"
            }
        }
    }

    buildTypes {
        debug {
            applicationIdSuffix '.debug'
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.customDebug
            resValue "string", "app_name", "MineDrakk Java (Debug)"
            resValue "string", "app_short_name", "MineDrakk Java (Debug)"
            resValue 'string', 'application_package', 'com.drakkonx.minedrakk.debug'
            resValue 'string', 'storageProviderAuthorities', 'com.drakkonx.minedrakk.scoped.gamefolder.debug'
            resValue 'string', 'shareProviderAuthority', 'com.drakkonx.minedrakk.scoped.controlfolder.debug'
        }
        proguard {
            initWith debug
            minifyEnabled true
            shrinkResources true
        }
        proguardNoDebug {
            initWith proguard
            debuggable false
        }

        release {
            // Don't set to true or java.awt will be a.a or something similar.
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.customRelease
            // defaultConfig already set
            // multiDexEnabled = true
            // debuggable = true
            resValue "string", "app_name", "MineDrakk Java"
            resValue "string", "app_short_name", "MineDrakk"
            resValue 'string', 'storageProviderAuthorities', 'com.drakkonx.minedrakk.scoped.gamefolder'
            resValue 'string', 'application_package', 'com.drakkonx.minedrakk'
        }
        // O buildType 'gplay' do Amethyst foi removido: ele referenciava a
        // signingConfig 'googlePlayBuild', que apontava para a keystore
        // upload.jks — retirada do repositorio pela AUDITORIA B3.
        // Para publicar na Play Store, configure a sua propria chave em
        // keystore.properties (ver README) e use o buildType 'release'.
    }

    ndkVersion = "27.3.13750724"

    externalNativeBuild {
        ndkBuild {
            path file('src/main/jni/Android.mk')
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    bundle {
        language {
            enableSplit = false
        }
    }

    packagingOptions {
        jniLibs {
            useLegacyPackaging = true
            keepDebugSymbols += ['**/libcutils.so']
            pickFirsts += ['**/libbytehook.so']
        }
    }

    buildFeatures {
        prefab true
        buildConfig true
    }

    lint {
        abortOnError false
    }
}

afterEvaluate {
    def componentJars = [
            ":forge_installer:jar",
            ":arc_dns_injector:jar",
            ":MioLibPatcher:jar",
            ":jre_lwjgl3glfw:jar"
    ]

    tasks.withType(com.android.build.gradle.tasks.MergeSourceSetFolders).configureEach { t ->
        t.dependsOn(componentJars)
    }

    // Needed or else the release builds complain about undeclared dependencies
    tasks.matching { it.name.toLowerCase().contains("lint") }.configureEach { t ->
        t.dependsOn(componentJars)
    }
}

dependencies {
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'commons-codec:commons-codec:1.15'
    // implementation 'com.wu-man:android-bsf-api:3.1.3'
    implementation 'androidx.preference:preference:1.2.0'
    // AUDITORIA B2: necessario para WindowInsetsControllerCompat (edge-to-edge, API 35+).
    implementation 'androidx.core:core:1.13.1'
    implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
    implementation 'androidx.annotation:annotation:1.5.0'

    implementation "androidx.constraintlayout:constraintlayout:2.1.4"

    implementation 'com.github.duanhong169:checkerboarddrawable:1.0.2'
    implementation 'com.github.PojavLauncherTeam:portrait-sdp:ed33e89cbc'
    implementation 'com.github.PojavLauncherTeam:portrait-ssp:6c02fd739b'
    implementation 'com.github.Mathias-Boulay:ExtendedView:1.0.0'
    implementation 'com.github.Mathias-Boulay:android_gamepad_remapper:2.0.3'
    implementation 'com.github.Mathias-Boulay:virtual-joystick-android:1.14'

    // implementation 'com.intuit.sdp:sdp-android:1.0.5'
    // implementation 'com.intuit.ssp:ssp-android:1.0.5'

    implementation 'org.tukaani:xz:1.8'
    // Our version of exp4j can be built from source at
    // https://github.com/PojavLauncherTeam/exp4j
    implementation 'net.sourceforge.htmlcleaner:htmlcleaner:2.6.1'
    implementation 'com.bytedance:bytehook:1.0.10'

    // implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.0'

    implementation 'top.fifthlight.touchcontroller:proxy-client-android:0.0.4'

    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])

    implementation "net.java.dev.jna:jna:5.14.0@aar"

}
apply from: rootProject.file('gradle/prefab_bypass.gradle')
